# parquet-reader

./: .gitignore  LICENCE  README.md  pyproject.toml
parquet_reader/: __main__.py
