[project]
name = "parquet-reader-cli"
version = "0.1.0"
description = "This programm allows to load a parquet-file into the terminal and let you decide which columns you want to display and save as csv. Interactive way to handle parquet-files with a lot of columns"
authors = [
    {name = "Fabio Knöß"}
]
license = {text = "EUPL -v. 1.2"}
readme = "README.md"
requires-python = "^3.9"
dependencies = [
]

[tool.poetry]

[tool.poetry.scripts]
parquet-reader = "parquet_reader.__main__:main"

[tool.poetry.group.dev.dependencies]
pyarrow = "^20.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
