[tool.poetry]
name = "parquet-reader-cli"
version = "0.1.0"
description = "Interactive CLI tool to load a parquet-file and select columns to preview or export as CSV."
authors = ["Fabio Knöß"]
license = "EUPL-1.2"
readme = "README.md"
packages = [{ include = "parquet_reader" }]
homepage = "https://github.com/<your-username>/parquet-reader"
keywords = ["parquet", "cli", "data", "csv"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
pyarrow = "^15.0.0"

[tool.poetry.scripts]
parquet-reader = "parquet_reader.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

